# Infotimanet-system

./: .clang-tidy  .gitignore  CMakeLists.txt  Image.qrc  InfoScreen.pro  README.md  RpmGauge.qml  includeFils.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  resource.qrc  static_analyzer.sh
Controller/: cabintempcontrol.cpp  cabintempcontrol.h  doorlockcontrol.cpp  doorlockcontrol.h  fancontrol.cpp  fancontrol.h  gaugecontrol.cpp  gaugecontrol.h  lightcontrol.cpp  lightcontrol.h  motortempcontrol.cpp  motortempcontrol.h  seatbeltcontrol.cpp  seatbeltcontrol.h  signallightcontrol.cpp  signallightcontrol.h  speedholdercontroller.cpp  speedholdercontroller.h  tripinfocontrol.cpp  tripinfocontrol.h  warningcontrol.cpp  warningcontrol.h
Model/: model.cpp  model.h
protobuf/: client  subscriber.py  tempupdate.cpp  tempupdate.h  weather.pb.cc  weather.pb.h  weather.proto  weather_pb2.py
